# activity-vocabulary

./: .gitmodules  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: test.yml
activity-vocabulary/: Cargo.toml  build.rs  vocab.yml
activity-vocabulary-core/: Cargo.toml
activity-vocabulary-core/src/: lib.rs  living_standard.rs  xsd.rs
activity-vocabulary-derive/: Cargo.toml
activity-vocabulary-derive/src/: gen.rs  lib.rs
activity-vocabulary/src/: lib.rs
activity-vocabulary/tests/: core-ex17-jsonld.json  core-ex19-jsonld.json  core-ex2-jsonld.json  core-ex20-jsonld.json  core-ex21b-jsonld.json  core-ex24-jsonld.json  core-ex27-jsonld.json  core-ex3-jsonld.json  core-ex4-jsonld.json  core-ex6-jsonld.json  ex.rs  simple0023.json  simple0024.json  simple0025.json  test_suites.rs  vocabulary-ex100-jsonld.json  vocabulary-ex106-jsonld.json  vocabulary-ex108-jsonld.json  vocabulary-ex112-jsonld.json  vocabulary-ex118-jsonld.json  vocabulary-ex120-jsonld.json  vocabulary-ex121-jsonld.json  vocabulary-ex123-jsonld.json  vocabulary-ex166-jsonld.json  vocabulary-ex170-jsonld.json  vocabulary-ex171-jsonld.json  vocabulary-ex175-jsonld.json  vocabulary-ex181-jsonldb.json  vocabulary-ex185-jsonld.json  vocabulary-ex191-jsonld.json  vocabulary-ex192-jsonld.json  vocabulary-ex193-jsonld.json  vocabulary-ex193b-jsonld.json  vocabulary-ex194-jsonld.json  vocabulary-ex197-jsonld.json  vocabulary-ex198-jsonld.json  vocabulary-ex26-jsonld.json  vocabulary-ex27-jsonld.json  vocabulary-ex32-jsonld.json  vocabulary-ex43-jsonld.json  (+16 more)
activity-vocabulary/tests/vocab/: ex10.json  ex11.json  ex12.json  ex13.json  ex14.json  ex15.json  ex16.json  ex17.json  ex18.json  ex19.json  ex2.json  ex20.json  ex21.json  ex22.json  ex23.json  ex24.json  ex25.json  ex26.json  ex27.json  ex28.json  ex29.json  ex30.json  ex31.json  ex32.json  ex33.json  ex34.json  ex35.json  ex36.json  ex37.json  ex38.json  ex39.json  ex4.json  ex40.json  ex41.json  ex42.json  ex43.json  ex44.json  ex45.json  ex46.json  ex47.json  (+17 more)
