[package]
name = "activity-vocabulary-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std"] }
nom = { version = "7.1.3", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
url = { version = "2.4.1", features = ["serde"] }
