[package]
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
name = "activity-vocabulary-core"
description = "Core types to represent ActivityStreams 2.0 types"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["std"] }
nom = { version = "7", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde-value.workspace = true
serde_json.workspace = true
url = { workspace = true, features = ["serde"] }
