[package]
name = "activity-vocabulary-derive"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
proc-macro2 = "1.0.67"
quote = "1.0.33"
rust-format = { version = "0.3.4", features = ["token_stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9"
syn = "2.0.37"
