[package]
name = "activity-vocabulary-derive"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
maplit = "1"
proc-macro2 = "1"
quote = "1"
rust-format = { version = "0.3", features = ["token_stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = "2"
