
[package]
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
name = "activity-vocabulary-derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
maplit = "1"
proc-macro2 = "1"
quote = "1"
rust-format = { version = "0.3", features = ["token_stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
syn = "2"
