[package]
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
name = "activity-vocabulary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlname = "activity-vocabulary"

[build-dependencies]
activity-vocabulary-derive = { path = "../activity-vocabulary-derive" }

[dependencies]
activity-vocabulary-core = { path = "../activity-vocabulary-core" }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
