[package]
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
name = "activity-vocabulary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htmlname = "activity-vocabulary"

[build-dependencies]
activity-vocabulary-derive = { path = "../activity-vocabulary-derive" }

[dependencies]
activity-vocabulary-core = { path = "../activity-vocabulary-core" }
serde = { workspace = true, features = ["derive"] }
serde-value = "0.7.0"
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
anyhow.workspace = true
diff = "0.1.13"
serde_json.workspace = true
